manifest/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: engine-slik
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: engine-slik
  replicas: 1
  template: 
    metadata:
      labels:
        app: engine-slik
    spec:
      containers:
      - name: engine-slik
        image: __IMAGE__:__VERSION__
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
      nodeSelector:
        aplikasi: backend 
      restartPolicy: Always
      imagePullSecrets:
      - name: mecred
